--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
       <resource>
         <directory>resources</directory>
       </resource>
+      <resource>
+        <directory>.</directory>
+        <targetPath>META-INF</targetPath>
+        <includes>
+          <include>LICENSE</include>
+          <include>notice.txt</include>
+        </includes>
+      </resource>
     </resources>
 
     <plugins>
